--- a/app/views/AboutView.html
+++ b/app/views/AboutView.html
@@ -2,7 +2,7 @@
   <div class="row py-3">
     <div class="col-lg-12">
       <p class="fs-3 align-items-center">
-        This is the About Page
+        This is the About Page!
       </p>
     </div>
   </div>
