created car card html template

--- a/app/views/CarsView.html
+++ b/app/views/CarsView.html
@@ -1,1 +1,33 @@
-<h1>Cars Page</h1>
+<div class="container">
+  <section class="row">
+    <div class="col-12">
+      <div class="text-center my-2">
+        <h1>Cars</h1>
+      </div>
+    </div>
+  </section>
+
+  <section class="row">
+    <!-- <div class="col-12 p-0 mb-3">
+      <div class="row bg-light shadow">
+        <div class="col-4 p-0">
+          <img class="img-fluid car-img"
+            src="https://images.unsplash.com/photo-1716167950737-ac635698a16a?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="Cool car picture">
+        </div>
+        <div class="col-8">
+          <div class="p-2">
+            <p class="fs-3">2002 Honda Civic</p>
+            <p class="fs-4">$2000</p>
+            <p>Red car goes fast</p>
+            <p class="fs-3">
+              <i class="mdi mdi-car-shift-pattern" title="Manual Transmission"></i>
+              <i class="mdi mdi-refresh-auto" title="Automatic Transmission"></i>
+            </p>
+            <p>2000000000 miles</p>
+          </div>
+        </div>
+      </div>
+    </div> -->
+  </section>
+</div>
