--- a/app/views/CarsView.html
+++ b/app/views/CarsView.html
@@ -7,7 +7,7 @@
     </div>
   </section>
 
-  <section class="row">
+  <section id="car-listings" class="row">
     <!-- <div class="col-12 p-0 mb-3">
       <div class="row bg-light shadow">
         <div class="col-4 p-0">
