--- a/app/views/HomeView.html
+++ b/app/views/HomeView.html
@@ -6,7 +6,7 @@
         <h2>Choose a listing type</h2>
         <div>
           <a href="#/cars">
-            <button class="btn btn-dark">
+            <button class="btn btn-dark" type="button">
               Cars <i class="mdi mdi-car-convertible"></i>
             </button>
           </a>
