--- a/app/views/HomeView.html
+++ b/app/views/HomeView.html
@@ -10,6 +10,11 @@
               Cars <i class="mdi mdi-car-convertible"></i>
             </button>
           </a>
+          <a href="#/houses">
+            <button class="btn btn-dark" type="button">
+              Houses <i class="mdi mdi-home"></i>
+            </button>
+          </a>
         </div>
       </div>
     </div>
